--- a/css/styles.css
+++ b/css/styles.css
@@ -165,6 +165,12 @@ p{
 
 }
 
+.TituloPrincipal{
+    animation-duration: 5s;
+    animation-name: TituloPrincipalAnimacion;
+
+}
+
 /* --------------------------ANIMACIONES Y EFECTOS-------------------------- */
 .OpcionesBarraSuperior__hijo:hover{
     text-shadow: 10px 10px 10px rgb(43, 1, 30);
@@ -197,6 +203,19 @@ p{
     color: white;
 
 }
+
+@keyframes TituloPrincipalAnimacion {
+    from {
+      margin-left: 100%;
+      width: 300%
+    }
+  
+    to {
+      margin-left: 0%;
+      width: 83%;
+    }
+  }
+
 
 
 /* --------------------------MEDIAS QUERYS-------------------------- */
