--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,14 @@ nav{
     border-radius: 10px;
     margin: 5px;
     box-shadow: 10px 10px 5px rgba(19, 2, 66, 0.3);
+    /* display: flex;
+    position: fixed;
+    justify-content: center; */
+}
+header{
+    /* display: flex;
+    position: fixed;
+    justify-content: center; */
 }
 
 .Pie{
@@ -166,8 +174,9 @@ p{
 }
 
 .TituloPrincipal{
-    animation-duration: 5s;
-    animation-name: TituloPrincipalAnimacion;
+    /* animation-duration: 20s;
+    animation-name: TituloPrincipalAnimacion; */
+    /* animation-iteration-count: infinite; */
 
 }
 
@@ -206,13 +215,13 @@ p{
 
 @keyframes TituloPrincipalAnimacion {
     from {
-      margin-left: 100%;
+      margin-left: -10%;
       width: 300%
     }
   
     to {
-      margin-left: 0%;
-      width: 83%;
+      margin-left: -100%;
+      width: 100%;
     }
   }
 
